--- a/src/app/pages/pokedle/pokedle.component.scss
+++ b/src/app/pages/pokedle/pokedle.component.scss
@@ -51,7 +51,8 @@ $green2: #001100;
   }
 
   .pokedex-stats-container {
-    width: 200px;
+    width: 100%;
+    flex: 1;
     display: flex;
     flex-direction: column;
     border: 4px solid $red1;
@@ -91,6 +92,8 @@ $green2: #001100;
   }
 
   .pokedex-inner-container {
+    width: 100%;
+    flex-grow: 2;
     border: 4px solid $red1;
     box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset,
       rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
@@ -101,6 +104,7 @@ $green2: #001100;
     height: 200px;
     display: flex;
     flex-wrap: wrap;
+    justify-content: center;
   }
 
   .poke-form {
